attached_assets/Pasted--home-runner-workspace-pythonlibs-lib-python3-11-site-packages-setuptools-config-apply-pyprojectto-1741958425261.txt
/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/setuptools/config/_apply_pyprojecttoml.py:74: _MissingDynamic: `authors` defined outside of `pyproject.toml` is ignored.
!!

        ********************************************************************************
        The following seems to be defined outside of `pyproject.toml`:

        `authors = 'AI Developer'`

        According to the spec (see the link below), however, setuptools CANNOT
        consider this value unless `authors` is listed as `dynamic`.

        https://packaging.python.org/en/latest/specifications/pyproject-toml/#declaring-project-metadata-the-project-table

        To prevent this problem, you can list `authors` under `dynamic` or alternatively
        remove the `[project]` table from your file and rely entirely on other means of
        configuration.
        ********************************************************************************

!!
  _handle_missing_dynamic(dist, project_table)
running build_ext
-- Performing Test HAS_FLTO
-- Performing Test HAS_FLTO - Success
-- Found pybind11: /nix/store/br2apairflg0zxamwzb2q13bk4xazk6n-python3.11-pybind11-2.12.0/include (found version "2.12.0")
-- Configuring done (0.7s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/workspace/build/temp.linux-x86_64-cpython-311/mlcpp
[ 40%] Building CXX object CMakeFiles/mlcpp.dir/src/neural.cpp.o
[ 40%] Building CXX object CMakeFiles/mlcpp.dir/src/matrix.cpp.o
/home/runner/workspace/src/matrix.cpp: In member function ‘ml::Matrix ml::Matrix::operator+(const ml::Matrix&) const’:
/home/runner/workspace/src/matrix.cpp:60:18: error: passing ‘const ml::Matrix’ as ‘this’ argument discards qualifiers [-fpermissive]
   60 |     add_optimized(other);
      |     ~~~~~~~~~~~~~^~~~~~~
In file included from /home/runner/workspace/src/matrix.cpp:1:
/home/runner/workspace/src/matrix.hpp:35:10: note:   in call to ‘void ml::Matrix::add_optimized(const ml::Matrix&)’
   35 |     void add_optimized(const Matrix& other);
      |          ^~~~~~~~~~~~~
/home/runner/workspace/src/matrix.cpp: In member function ‘ml::Matrix ml::Matrix::operator-(const ml::Matrix&) const’:
/home/runner/workspace/src/matrix.cpp:67:23: error: passing ‘const ml::Matrix’ as ‘this’ argument discards qualifiers [-fpermissive]
   67 |     subtract_optimized(other);
      |     ~~~~~~~~~~~~~~~~~~^~~~~~~
/home/runner/workspace/src/matrix.hpp:36:10: note:   in call to ‘void ml::Matrix::subtract_optimized(const ml::Matrix&)’
   36 |     void subtract_optimized(const Matrix& other);
      |          ^~~~~~~~~~~~~~~~~~
/home/runner/workspace/src/matrix.cpp: In member function ‘ml::Matrix ml::Matrix::operator*(const ml::Matrix&) const’:
/home/runner/workspace/src/matrix.cpp:76:23: error: passing ‘const ml::Matrix’ as ‘this’ argument discards qualifiers [-fpermissive]
   76 |     multiply_optimized(other);
      |     ~~~~~~~~~~~~~~~~~~^~~~~~~
/home/runner/workspace/src/matrix.hpp:37:10: note:   in call to ‘void ml::Matrix::multiply_optimized(const ml::Matrix&)’
   37 |     void multiply_optimized(const Matrix& other);
      |          ^~~~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/mlcpp.dir/build.make:76: CMakeFiles/mlcpp.dir/src/matrix.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/runner/workspace/src/neural.cpp: In constructor ‘ml::Layer::Layer(size_t, size_t, ml::ActivationType)’:
/home/runner/workspace/src/neural.cpp:10:29: error: no matching function for call to ‘ml::Matrix::Matrix()’
   10 |     , activation_(activation) {
      |                             ^
In file included from /home/runner/workspace/src/neural.hpp:2,
                 from /home/runner/workspace/src/neural.cpp:1:
/home/runner/workspace/src/matrix.hpp:12:5: note: candidate: ‘ml::Matrix::Matrix(const ml::Matrix&)’
   12 |     Matrix(const Matrix& other);
      |     ^~~~~~
/home/runner/workspace/src/matrix.hpp:12:5: note:   candidate expects 1 argument, 0 provided
/home/runner/workspace/src/matrix.hpp:11:5: note: candidate: ‘ml::Matrix::Matrix(size_t, size_t)’
   11 |     Matrix(size_t rows, size_t cols);
      |     ^~~~~~
/home/runner/workspace/src/matrix.hpp:11:5: note:   candidate expects 2 arguments, 0 provided
/home/runner/workspace/src/neural.cpp:10:29: error: no matching function for call to ‘ml::Matrix::Matrix()’
   10 |     , activation_(activation) {
      |                             ^
/home/runner/workspace/src/matrix.hpp:12:5: note: candidate: ‘ml::Matrix::Matrix(const ml::Matrix&)’
   12 |     Matrix(const Matrix& other);
      |     ^~~~~~
/home/runner/workspace/src/matrix.hpp:12:5: note:   candidate expects 1 argument, 0 provided
/home/runner/workspace/src/matrix.hpp:11:5: note: candidate: ‘ml::Matrix::Matrix(size_t, size_t)’
   11 |     Matrix(size_t rows, size_t cols);
      |     ^~~~~~
/home/runner/workspace/src/matrix.hpp:11:5: note:   candidate expects 2 arguments, 0 provided
/home/runner/workspace/src/neural.cpp: At global scope:
/home/runner/workspace/src/neural.cpp:84:1: note: ‘ml::NeuralNetwork::NeuralNetwork()’ is implicitly deleted because the default definition would be ill-formed:
   84 | NeuralNetwork::NeuralNetwork() = default;
      | ^~~~~~~~~~~~~
/home/runner/workspace/src/neural.cpp:84:1: error: no matching function for call to ‘ml::Matrix::Matrix()’
/home/runner/workspace/src/matrix.hpp:12:5: note: candidate: ‘ml::Matrix::Matrix(const ml::Matrix&)’
   12 |     Matrix(const Matrix& other);
      |     ^~~~~~
/home/runner/workspace/src/matrix.hpp:12:5: note:   candidate expects 1 argument, 0 provided
/home/runner/workspace/src/matrix.hpp:11:5: note: candidate: ‘ml::Matrix::Matrix(size_t, size_t)’
   11 |     Matrix(size_t rows, size_t cols);
      |     ^~~~~~
/home/runner/workspace/src/matrix.hpp:11:5: note:   candidate expects 2 arguments, 0 provided
make[2]: *** [CMakeFiles/mlcpp.dir/build.make:90: CMakeFiles/mlcpp.dir/src/neural.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:83: CMakeFiles/mlcpp.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
Traceback (most recent call last):
  File "/home/runner/workspace/setup.py", line 48, in <module>
    setup(
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/setuptools/__init__.py", line 117, in setup
    return distutils.core.setup(**attrs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/setuptools/_distutils/core.py", line 186, in setup
    return run_commands(dist)
           ^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/setuptools/_distutils/core.py", line 202, in run_commands
    dist.run_commands()
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/setuptools/_distutils/dist.py", line 1002, in run_commands
    self.run_command(cmd)
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/setuptools/dist.py", line 999, in run_command
    super().run_command(command)
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/setuptools/_distutils/dist.py", line 1021, in run_command
    cmd_obj.run()
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/setuptools/command/build_ext.py", line 99, in run
    _build_ext.run(self)
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/setuptools/_distutils/command/build_ext.py", line 375, in run
    self.build_extensions()
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/setuptools/_distutils/command/build_ext.py", line 491, in build_extensions
    self._build_extensions_serial()
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/setuptools/_distutils/command/build_ext.py", line 517, in _build_extensions_serial
    self.build_extension(ext)
  File "/home/runner/workspace/setup.py", line 46, in build_extension
    subprocess.check_call(["cmake", "--build", "."] + build_args, cwd=build_temp)
  File "/nix/store/clx0mcir7qw8zk36zbr4jra789g3knf6-python3-3.11.10/lib/python3.11/subprocess.py", line 413, in check_call
    raise CalledProcessError(retcode, cmd)
subprocess.CalledProcessError: Command '['cmake', '--build', '.', '-j2']' returned non-zero exit status 2.
